# DungeonCrawler

./: .env.example  .gitignore  CLAUDE.md  PROJECT_OVERVIEW.md  README.md  start.ps1  start.sh
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/data/: settings.json
backend/app/data/stories/: curse_of_strahd.json  lost_mine.json  the_sunken_library.json
backend/app/models/: character.py  game_state.py  inventory.py  story.py
backend/app/routers/: app_settings.py  audio.py  characters.py  game.py  images.py  ollama.py  stories.py
backend/app/services/: aidm.py  audio.py  character.py  deviantart.py  inventory.py  ollama_client.py  save_manager.py  story.py
backend/prompts/: assessor_system.txt  dice_agent_system.txt  responder_system.txt
backend/tests/: test_api.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/AmbientAudio/: AmbientAudio.css  AmbientAudio.tsx
frontend/src/components/CharacterSheet/: CharacterSheet.css  CharacterSheet.tsx
frontend/src/components/CombatPanel/: CombatPanel.css  CombatPanel.tsx
frontend/src/components/ImagePanel/: ImagePanel.css  ImagePanel.tsx
frontend/src/components/Inventory/: Inventory.css  Inventory.tsx
frontend/src/components/Layout/: Layout.css  Layout.tsx
frontend/src/components/NarrativeView/: NarrativeView.css  NarrativeView.tsx
frontend/src/hooks/: useDiceRoll.ts  useGameState.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
(+6 files in other folders)
